--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nikhilmittalx.github.io/Numberlay",
+  "homepage": "https://nikhilmittalx.github.io/Numberlay/#",
   "name": "bookkeeping",
   "version": "0.1.0",
   "private": true,
