--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://nikhilmittalx.github.io/Numberlay/#",
-  "name": "bookkeeping",
+  "name": "numberlay",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
